--- a/appclubfarovalencia-v1.0/package.json
+++ b/appclubfarovalencia-v1.0/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appclubfarovalencia",
+  "name": "appclubfarovalencia-v1.0",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
